# MapGIS-Model-3D-Data-SDK

./: README.md
M3D_SDK/M3D_Parser_JS/: .editorconfig  .eslintrc.json  .gitignore  .markdownlint.json  .prettierignore  .prettierrc.js  README.md  index.html  package-lock.json  package.json  server.js  webpack.config.js
M3D_SDK/M3D_Parser_JS/data/景观_建筑模型/: 景观_建筑模型.mcj
M3D_SDK/M3D_Parser_JS/data/景观_建筑模型/data/0/: 010_000.m3d  010_001.m3d  010_002.m3d  010_003.m3d  04744_000.m3d
M3D_SDK/M3D_Parser_JS/data/景观_建筑模型/data/1/: 1109_000.m3d  1109_001.m3d  1109_002.m3d  1109_003.m3d  11615_001.m3d  11817_000.m3d  11817_001.m3d  11817_002.m3d  11817_003.m3d  121_000.m3d  121_001.m3d  121_002.m3d  121_003.m3d  12523_001.m3d  14643_001.m3d  EmptyNode_1_29_2.m3d
M3D_SDK/M3D_Parser_JS/data/景观_建筑模型/data/2/: 2109_002.m3d  21110_000.m3d  21110_001.m3d  21110_002.m3d  21110_003.m3d  21312_000.m3d  21312_001.m3d  21312_002.m3d  21312_003.m3d  21514_002.m3d  21716_000.m3d  21716_001.m3d  21716_002.m3d  21716_003.m3d  21817_002.m3d  21918_000.m3d  21918_001.m3d  21918_002.m3d  21918_003.m3d  22120_000.m3d  22120_001.m3d  22120_002.m3d  22120_003.m3d  22221_002.m3d  22625_000.m3d  22625_001.m3d  22625_002.m3d  22625_003.m3d  22826_002.m3d  232_000.m3d  232_001.m3d  232_002.m3d  232_003.m3d  23431_002.m3d  23936_002.m3d  24340_002.m3d  243_000.m3d  243_001.m3d  243_002.m3d  243_003.m3d  (+11 more)
M3D_SDK/M3D_Parser_JS/data/景观_建筑模型/data/3/: 310_003.m3d  31110_003.m3d  31211_003.m3d  31312_003.m3d  31413_000.m3d  31413_001.m3d  31413_002.m3d  31413_003.m3d  31514_000.m3d  31514_001.m3d  31514_002.m3d  31514_003.m3d  31615_000.m3d  31615_001.m3d  31615_002.m3d  31615_003.m3d  31716_003.m3d  31918_003.m3d  32019_000.m3d  32019_001.m3d  32019_002.m3d  32019_003.m3d  32120_003.m3d  321_003.m3d  32322_000.m3d  32322_001.m3d  32322_002.m3d  32322_003.m3d  32524_000.m3d  32524_001.m3d  32524_002.m3d  32524_003.m3d  32624_003.m3d  32725_003.m3d  33027_003.m3d  33128_003.m3d  33229_003.m3d  332_003.m3d  33330_003.m3d  33532_003.m3d  (+21 more)
M3D_SDK/M3D_Parser_JS/data/景观_建筑模型/data/4/: 42221_000.m3d  42221_001.m3d  42221_002.m3d  42221_003.m3d
M3D_SDK/M3D_Parser_JS/data/景观_建筑模型/data/5/: 51211_000.m3d  51211_001.m3d  51211_002.m3d  51211_003.m3d  52423_000.m3d  52423_001.m3d  52423_002.m3d  52423_003.m3d
M3D_SDK/M3D_Parser_JS/src/: MapGISM3D.js  MapGISM3DDataContent.js  MapGISM3DPointCloud.js  MapGISM3DSet.js  appendM3D.js  index.js
M3D_SDK/M3D_Parser_JS/src/core/: Base.js
M3D_SDK/M3D_Parser_JS/src/model3d/: CachedRendererResources.js  CreateIndexBufferJob.js  CreateVertexBufferJob.js  M3DModelParser.js  MapGISM3D.js  MapGISM3DDataContent.js  MapGISM3DPointCloud.js  MapGISM3DSet.js  MapGISM3DTileContent.js
M3D_SDK/M3D_Parser_JS/src/shaders/: getClipAndStyleCode.js  getClippingFunction.js
M3D_SDK/M3D_Parser_Native/g3dtileprj/: CMakeLists.txt  README.md
M3D_SDK/M3D_Parser_Native/g3dtileprj/include/: g3dtile.h  g3dtilecontent.h  g3dtiledefine.h  g3dtilegaussian.h  g3dtilegeometry.h  g3dtileinfo.h  g3dtilelayer.h  g3dtilerecord.h  g3dtilespatial.h  g3dtilestorage.h  g3dtilestructuretree.h
M3D_SDK/M3D_Parser_Native/g3dtileprj/src/: ci_3dmodel.h  ci_3dmodel_3dtile.cpp  ci_3dmodel_3dtile.h  ci_3dmodel_attribute_att.cpp  ci_3dmodel_attribute_att.h  ci_3dmodel_attribute_json.cpp  ci_3dmodel_attribute_json.h  ci_3dmodel_attribute_sqlite.cpp  ci_3dmodel_attribute_sqlite.h  ci_3dmodel_attribute_sqlite_tool.cpp  ci_3dmodel_attribute_sqlite_tool.h  ci_3dmodel_b3dm.cpp  ci_3dmodel_cmpt.cpp  ci_3dmodel_gltf.cpp  ci_3dmodel_i3dm.cpp  ci_3dmodel_pnts.cpp  ci_3dmodel_tid.cpp  ci_3dmodel_tid.h  ci_3dtiles_tile.cpp  ci_3dtiles_tile.h  ci_assist.cpp  ci_assist.h  ci_cache_storage.cpp  ci_cache_storage.h  ci_cache_tile_3dtiles_impl.cpp  ci_cache_tile_3dtiles_impl.h  ci_cache_tile_m3d_impl.cpp  ci_cache_tile_m3d_impl.h  ci_dracotool.cpp  ci_dracotool.h  ci_g3dtilecontent.cpp  ci_gaussian_ksplat_read_write.cpp  ci_gaussian_ksplat_read_write.h  ci_gaussian_ply_read_write.cpp  ci_gaussian_ply_read_write.h  ci_gaussian_read_write.cpp  ci_gaussian_sog_read_write.cpp  ci_gaussian_sog_read_write.h  ci_gaussian_splat_read_write.cpp  ci_gaussian_splat_read_write.h  (+29 more)
M3D_SDK/M3D_SDK/: README.md
Specification/: README.md
